# rando-colour-generator-react

./: .gitignore  README.md  package-lock.json  package.json
colourous/: Cargo.toml
colourous/src/: lib.rs
public/: index.html
src/: App.css  App.tsx  colourous.test.ts  colourous.ts  index.css  index.tsx  media.css  nameThatColour.js
src/components/: action-bar.css  action-bar.tsx  colour-codes.css  colour-codes.tsx  generator.css  generator.tsx  like-box.css  like-box.tsx  likes.css  likes.tsx  variation-box.css  variation-box.tsx  variations.css  variations.tsx
src/helpers/: colourHelper.ts  likesHelper.ts
src/hooks/: use-toggle-state.ts
src/state/: store.ts
src/state/action-creators/: index.ts
src/state/action-types/: index.ts
src/state/actions/: index.ts
src/state/middlewares/: persist-middleware.ts
src/state/reducers/: index.ts
src/types/: Colour.ts  index.ts
