[package]
name = "colourous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = { version="0.2.78", features = ["serde-serialize"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.60"
serde = { version = "1.0.145", features = ["derive"] }
serde-wasm-bindgen = "0.4"